packages/scrypt-ts-transpiler/test/contracts/invalid/publicMethod1.ts
import { SmartContract } from '@opcat-labs/scrypt-ts';

export class PublicMethod1 extends SmartContract {
  // invalid, contract should have at least one public function
}
